assets/css/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Commissioner', sans-serif;
}

.app {
    padding: 0 1rem;
}

.activity {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.activity__text {
    font-weight: 600;
    font-size: clamp(4rem, 5vw, 8rem);
    text-align: center;
}

.activity__type {
    font-weight: 300;
    font-size: clamp(1rem, 5vw, 2rem);
}

.tip {
    position: absolute;
    left: 50%;
    bottom: 50px;
    transform: translate(-50%);
    font-weight: 200;
    font-size: clamp(1.25rem, 5vw, 2.25rem);
}

